--- a/code-generator-api/src/main/resources/config/application-test.yml
+++ b/code-generator-api/src/main/resources/config/application-test.yml
@@ -12,11 +12,11 @@ spring:
       active: test
     # 配置数据源
     datasource:
-      url: jdbc:mysql://110.86.15.178:3306/code-generator?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull&useSSL=false # MySQL在高版本需要指明是否进行SSL连接 解决则加上 &useSSL=false
+      url: jdbc:mysql://192.168.124.232:3306/p_smartdoor?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull&useSSL=false # MySQL在高版本需要指明是否进行SSL连接 解决则加上 &useSSL=false
 #      url: jdbc:mysql://qgjdk9.natappfree.cc/demo?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull&useSSL=false # MySQL在高版本需要指明是否进行SSL连接 解决则加上 &useSSL=false
-      name: code-generator
-      username: root
-      password: ajhyzsc2019!@#
+      name: p_smartdoor
+      username: smartdoor
+      password: smartdoor1234
       # 使用druid数据源
       type: com.alibaba.druid.pool.DruidDataSource
       driver-class-name: com.mysql.jdbc.Driver
@@ -38,12 +38,12 @@ spring:
       # Redis数据库索引（默认为0）
       database: 0
       # Redis服务器地址
-      host: 110.86.15.178
+      host: 192.168.124.232
       # Redis服务器连接端口
-      port: 16379
+      port: 6379
       timeout: 6000
       # Redis服务器连接密码（默认为空）  如果为空则需在ShiroConfig文件中不设置redis密码，否则异常
-      password: zscroot!@
+      password: wwm#$123
       jedis:
         pool:
           max-active: 1000  # 连接池最大连接数（使用负值表示没有限制）
